Updated dark mode to fix font color in burger menu

--- a/blogdarkmode.css
+++ b/blogdarkmode.css
@@ -748,6 +748,10 @@ footer p {
     padding: 0;
   }
 
+  #navigationMain ul li a {
+    color: #262626;
+  }
+
   #navigationMain ul li a:active {
     box-shadow: none;
   }
